// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls renders correctly when showConflict is false 1`] = `
<div>
  <div
    class="flex flex-row gap-4 mt-2 justify-center items-center"
  >
    <button
      data-testid="reset"
    >
      Reset (R)
    </button>
    <button
      data-testid="new"
    >
      New Game (N)
    </button>
    <button
      data-testid="undo"
    >
      Undo (Z)
    </button>
    <button
      data-testid="toggle"
    >
      Show warnings (W)
    </button>
  </div>
</div>
`;

exports[`Controls renders correctly when showConflict is true 1`] = `
<div>
  <div
    class="flex flex-row gap-4 mt-2 justify-center items-center"
  >
    <button
      data-testid="reset"
    >
      Reset (R)
    </button>
    <button
      data-testid="new"
    >
      New Game (N)
    </button>
    <button
      data-testid="undo"
    >
      Undo (Z)
    </button>
    <button
      data-testid="toggle"
    >
      Hide warnings (W)
    </button>
  </div>
</div>
`;
